unpackaged/main/default/objects/Case/fields/Demo_field__c.field-meta.xml
<CustomField>
    <fullName>Demo_field__c</fullName>
    <label>Demo field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>