unpackaged/main/default/objects/Case/fields/Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact__c</fullName>
    <label>Initial Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>