unpackaged/main/default/objects/Case/fields/New_Case_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Client__c</fullName>
    <label>New Case Client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>