unpackaged/main/default/objects/Case/fields/New_Case_ID_2__c.field-meta.xml
<CustomField>
    <fullName>New_Case_ID_2__c</fullName>
    <label>New Case ID 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>