unpackaged/main/default/objects/Case/fields/New_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Case_ID__c</fullName>
    <label>New Case ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>