unpackaged/main/default/objects/Case/fields/new_case_info__c.field-meta.xml
<CustomField>
    <fullName>new_case_info__c</fullName>
    <label>new-case-info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>