unpackaged/main/default/objects/Case/fields/New_Engagement__c.field-meta.xml
<CustomField>
    <fullName>New_Engagement__c</fullName>
    <label>New Engagement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>