unpackaged/main/default/objects/Case/fields/New_test_validation__c.field-meta.xml
<CustomField>
    <fullName>New_test_validation__c</fullName>
    <label>New test validation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>