unpackaged/main/default/objects/Case/fields/Post_call_information__c.field-meta.xml
<CustomField>
    <fullName>Post_call_information__c</fullName>
    <label>Post call information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>