unpackaged/main/default/objects/Case/fields/Pre_call_information__c.field-meta.xml
<CustomField>
    <fullName>Pre_call_information__c</fullName>
    <label>Pre call information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>