unpackaged/main/default/objects/Case/fields/Second_new_field__c.field-meta.xml
<CustomField>
    <fullName>Second_new_field__c</fullName>
    <label>Second new field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>