unpackaged/main/default/objects/Case/fields/Super_Important_Case_Info__c.field-meta.xml
<CustomField>
    <fullName>Super_Important_Case_Info__c</fullName>
    <label>Super Important Case Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>